# dodo

./: .gitignore  README.md
src/dodo_canbus/: CMakeLists.txt  README.md  package.xml
src/dodo_canbus/include/: can_dispatcher.hpp  can_port.hpp  damiao_can.hpp  multi_motor_control_node.hpp  odrive_axis.hpp  odrive_driver.hpp  odrive_protocol.hpp
src/dodo_canbus/launch/: canbus_node.launch.py
src/dodo_canbus/msg/: MotorCommand.msg  MotorCommandArray.msg  MotorState.msg  MotorStateArray.msg
src/dodo_canbus/scripts/: fold.jsonl  fold_to_ground.jsonl  get_min_max.py  ground_up.jsonl  stand.jsonl  test.py  trajectory.jsonl  trajectory_player_node.py  trajectory_recorder_node.py  walk.jsonl  walk_left.jsonl
src/dodo_canbus/src/: multi_motor_control_main.cpp  multi_motor_control_node.cpp
